[package]
name = "libferroxid-packets"
version = "0.1.0"
authors = ["András Németh <sunarch@protonmail.com>"]
edition = "2021"
description = "Network packets"
documentation = "https://docs.rs/libferroxid-packets"
readme = "README.md"
homepage = "https://codeberg.org/sunarch/libferroxid-packets"
repository = "https://codeberg.org/sunarch/libferroxid-packets"
license = "MPL-2.0"
keywords = [
    "libferroxid",
    "network", "packets",
]
categories = [
    "command-line-utilities",
    "network-programming",
]
exclude = [".idea/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libferroxid_packets"
path = "src/lib.rs"

[dependencies]
#bincode = "1.3.3"
#libferroxid = "0.1.0"
#pnet = "0.33.0"
#serde = "1.0.138"
#serde_derive = "1.0.138"
